replace tab with sidemenu

--- a/src/www/templates/info-future.html
+++ b/src/www/templates/info-future.html
@@ -1,4 +1,4 @@
-<ion-view view-title="天氣預測">
+<ion-view view-title="天氣預報">
   <ion-content>
     <div class="list card">
         <div class="row" ng-repeat="futureData in futureDataArray">
