--- a/src/www/templates/info-past.html
+++ b/src/www/templates/info-past.html
@@ -1,4 +1,4 @@
-<ion-view view-title="天氣紀錄">
+<ion-view view-title="天氣觀測">
   <ion-content>
     <div class="list card">
         <div class="row" ng-repeat="pastData in pastDataArray">
