--- a/src/www/templates/favourite.html
+++ b/src/www/templates/favourite.html
@@ -2,7 +2,7 @@
   <ion-content on-swipe-left="goRight()" on-swipe-down="swipeDown()">
     <ion-list>
       <ion-item class="item item-thumbnail-left" ng-repeat="favouriteData in favouriteDataArray" href="#/app/info" ng-click="clickFavourite(favouriteData.id)">
-        <img ng-if="historyData.snapshotUrl" src="{{favouriteData.snapshotUrl}}">
+        <img ng-if="favouriteData.snapshotUrl" src="{{favouriteData.snapshotUrl}}">
         <h2>{{favouriteData.location}} </h2>
         <p>{{favouriteData.gps1}} , {{favouriteData.gps2}}</p>
       </ion-item>
